// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly hide in web 1`] = `<div />`;

exports[`should render correctly initially no warning 1`] = `
<div>
  <div
    class="subtitle"
  >
    Auto Save
  </div>
  <div>
    mock-select-control id:
    set-auto-save
    label:
    Auto Save
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-auto-save"
    />
  </div>
  <div>
    mock-select-control id:
    auto-save-directory
    label:
    Auto Save Location
    url:
    options:
    <div>
      mock-path-input id:
      location-input
      buttonTitle:
      Choose Folder
      type:
      1
      defaultValue:
      /MyDocuments
      forceValidValue:
      false
      className:
      ""
      <input
        class="path-input"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    auto-save-interval
    label:
    Save Every
    url:
    options:
    <div>
      UnitInput: 
      save-every
      <p>
        precision: 
        0
      </p>
      <p>
        unit: 
        m
      </p>
      <input
        id="save-every"
        max="60"
        min="1"
        value="10"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    auto-save-maximum-count
    label:
    Number of Auto Save
    url:
    options:
    <div>
      UnitInput: 
      number-of-auto-save
      <p>
        precision: 
        0
      </p>
      <input
        id="number-of-auto-save"
        max="10"
        min="1"
        value="5"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly initially with warning 1`] = `
<div>
  <div
    class="subtitle"
  >
    Auto Save
  </div>
  <div>
    mock-select-control id:
    set-auto-save
    label:
    Auto Save
    url:
    options:
    [{"label":"On","value":true},{"label":"Off","value":false}]
    <input
      class="select-control"
      id="set-auto-save"
    />
  </div>
  <div>
    mock-select-control id:
    auto-save-directory
    label:
    Auto Save Location
    url:
    options:
    <div>
      mock-path-input id:
      location-input
      buttonTitle:
      Choose Folder
      type:
      1
      defaultValue:
      /MyDocuments
      forceValidValue:
      false
      className:
      "with-error"
      <input
        class="path-input"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    auto-save-interval
    label:
    Save Every
    url:
    options:
    <div>
      UnitInput: 
      save-every
      <p>
        precision: 
        0
      </p>
      <p>
        unit: 
        m
      </p>
      <input
        id="save-every"
        max="60"
        min="1"
        value="10"
      />
    </div>
  </div>
  <div>
    mock-select-control id:
    auto-save-maximum-count
    label:
    Number of Auto Save
    url:
    options:
    <div>
      UnitInput: 
      number-of-auto-save
      <p>
        precision: 
        0
      </p>
      <input
        id="number-of-auto-save"
        max="10"
        min="1"
        value="5"
      />
    </div>
  </div>
</div>
`;
